k8s/overlays/k8s-prod/ingress-tls-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  namespace: odoo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
spec:
  tls:
    - hosts:
        - erp.tudominio.com
      secretName: odoo-tls-secret
  rules:
    - host: erp.tudominio.com
      http:
        paths:
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8072
          - path: /longpolling
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8072
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069
